# tr-plots

./: .gitignore  Ancestry_Plots.py  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  vcf_allele_counter.py
Code/: import urllib.py
Code/Ancestry/: Ancestry_Plots.py  Ancestry_Plots_Update_Subtitle.py  Ancestry_Plots_Update_Subtitle_copy copy.py
Code/Boxplots for Allele Length/: Allele_Length_Boxplots.py
Code/BoxplotsForAlleleLength/: Allele_Length_SP_Seaborn.py  Allele_Length_Swarmplots.py
Code/Combining Files/: combining_HTMLs_1_file.py  combining_HTMLs_split_files.py
Code/Loci Count/: Loci_Count.py
Code/Matching Files/: Datasets_JSON_TSV_Matching_Loci copy.py  Matching_Debug_Info_to_Ancestry.py  VCF_Loci_Matching_JSON_Metdata_CSV_Ancestry.py
Code/MatchingFiles/: Datasets_JSON_Matching_Loci.py  Datasets_JSON_TSV_Matching_Loci.py  Matching_Debug_Info_to_Ancestry copy.py  Matching_Debug_Info_to_Ancestry.py
Code/Merging Files/: merge_html_plots_to_one.py  merge_png_plots_to_one.py.py
Code/Reading Files/: check_sample_ids.py  check_vcf_for_chr_pos.py  combining_HTMLs_1_file.py  combining_HTMLs_split_files.py  import urllib.py  import_json.py  import_tsv.py  import_vcf.py  make_VCF_CSV_Excel.py
Code/ReadingFiles/: check_sample_ids.py  check_vcf_for_chr_pos.py  import_csv.py  import_vcf.py
Data/: README.md
Results/: README.md
code/matching_files/: vcf_loci_matching_json_metdata_csv_ancestry.py
code/reading_files/: import_tsv.py  make_vcf_csv_excel.py
src/tr_plots.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+80 files in other folders)
